fix: prevent horizontal scroll in Supreme table

--- a/src/JhipsterSampleApplication/ClientApp/src/app/entities/supreme/list/supreme.component.scss
+++ b/src/JhipsterSampleApplication/ClientApp/src/app/entities/supreme/list/supreme.component.scss
@@ -171,6 +171,7 @@
   /* Ensure scrollable tables don't exceed container width */
   ::ng-deep .p-datatable.p-datatable-scrollable .p-datatable-wrapper {
     overflow: auto;
+    scrollbar-gutter: stable;
   }
 
   /* Match Birthday query builder sizing */
